@@ -1,6 +1,8 @@
 22 October 2018: Wouter
 	- Fix #4192: unbound-control-setup generates keys not readable by
 	  group.
+	- check that the dnstap socket file can be opened and exists, print
+	  error if not.
 
 22 October 2018: Ralph
 	- Change fast-server-num default to 3.
